@@ -18,6 +18,7 @@ NEW: [features/enhancements]
 +Remember Shelf layout and selected tab when application is restarted.
 +Improve Python autoindenter to better handle more conditions in regards to
 brackets and parens.
++Autocomp and calltip shortcuts are now customizable.
 
 LIBRARY:
 +Support ControlBars in on left and right side of ControlBox.
